src/test/ui/consts/const-multi-ref.stderr
error[E0017]: references in constants may only refer to immutable values
  --> $DIR/const-multi-ref.rs:6:13
   |
LL |     let p = &mut a;
   |             ^^^^^^ constants require immutable values

error[E0492]: cannot borrow a constant which may contain interior mutability, create a static instead
  --> $DIR/const-multi-ref.rs:16:13
   |
LL |     let p = &a;
   |             ^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0017, E0492.
For more information about an error, try `rustc --explain E0017`.
